resolved flicker navbar

--- a/Attendence/Frontend/src/index.css
+++ b/Attendence/Frontend/src/index.css
@@ -26,8 +26,7 @@
     text-decoration: inherit;
   }
   
-  a:hover {
-  }
+ 
   /* span{
     color: black;
     font-size: 30px;
